5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1590_2049.log
== TEST (2019-03-21 12:50:03) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo/divisor
resto = dividendo%divisor

print ("O dividendo é: ", dividendo)
print ("O divisor é: ", divisor)
print ("O quociente é: ", quociente)
print ("O resto é: ", resto)


-- OUTPUT:
O dividendo é:  8
O divisor é:  5
O quociente é:  1.6
O resto é:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:50:18) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo/divisor
resto = dividendo%divisor

print ("O dividendo é: ", dividendo)
print ("O divisor é: ", divisor)
print ("O quociente é: ", quociente)
print ("O resto é: ", resto)


-- OUTPUT:
O dividendo é:  8
O divisor é:  5
O quociente é:  1.6
O resto é:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:50:38) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo/divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1.6
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:51:29) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo/divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.127707
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1.6
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7.0
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173.5
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:51:44) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:51:59) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:52:04) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.154443
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:52:08) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.180623
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:53:41) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.123706
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:57:42) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:57:55) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:58:09) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:58:34) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:58:38) 
-- CODE:
x = int (input("Digite o primeiro numero:"))
y = int (input("Digite o segundo numero:"))
dividendo = x 
divisor = y 
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.148871
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:59:11) 
-- CODE:
dividendo= int (input("Digite o primeiro numero:"))
divisor = int (input("Digite o segundo numero:"))

quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:59:26) 
-- CODE:
dividendo= int (input("Digite o primeiro numero:"))
divisor = int (input("Digite o segundo numero:"))

quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.211229
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:01:11) 
-- CODE:
num1 = int(input("Digite o primeiro numero: "))
num2 = int(input("Digite o segundo numero: "))

dividendo = num1
divisor = num2
quociente = dividendo/divisor
resto = dividendo%divisor

print("O dividendo eh, dividendo)
print("O divisor eh", divisor)
print("O quociente eh", quociente)
print("E o resto eh", resto)

-- ERROR:
File "XXXX", line 9
    print("O dividendo eh, dividendo)
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:01:57) 
-- CODE:
num1 = int(input("Digite o primeiro numero: "))
num2 = int(input("Digite o segundo numero: "))

dividendo = num1
divisor = num2
quociente = dividendo/divisor
resto = dividendo%divisor

print("O dividendo eh", dividendo)
print("O divisor eh", divisor)
print("O quociente eh", quociente)
print("E o resto eh", resto)

-- OUTPUT:
O dividendo eh 8
O divisor eh 5
O quociente eh 1.6
E o resto eh 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:02:32) 
-- CODE:
num1 = int(input("Digite o primeiro numero: "))
num2 = int(input("Digite o segundo numero: "))

dividendo = num1
divisor = num2
quociente = dividendo//divisor
resto = dividendo%divisor

print("O dividendo eh", dividendo)
print("O divisor eh", divisor)
print("O quociente eh", quociente)
print("E o resto eh", resto)

-- OUTPUT:
O dividendo eh 8
O divisor eh 5
O quociente eh 1
E o resto eh 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:03:19) 
-- CODE:
num1 = int(input("Digite o primeiro numero: "))
num2 = int(input("Digite o segundo numero: "))

dividendo = num1
divisor = num2
quociente = dividendo//divisor
resto = dividendo%divisor

print("O dividendo eh", dividendo)
print("O divisor eh", divisor)
print("O quociente eh", quociente)
print("E o resto eh", resto)

-- EXECUTION TIME:
0.210746
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh 8
O divisor eh 5
O quociente eh 1
E o resto eh 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh 14
O divisor eh 2
O quociente eh 7
E o resto eh 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh 347
O divisor eh 2
O quociente eh 173
E o resto eh 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:03:23) 
-- CODE:
num1 = int(input("Digite o primeiro numero: "))
num2 = int(input("Digite o segundo numero: "))

dividendo = num1
divisor = num2
quociente = dividendo//divisor
resto = dividendo%divisor

print("O dividendo eh", dividendo)
print("O divisor eh", divisor)
print("O quociente eh", quociente)
print("E o resto eh", resto)

-- OUTPUT:
O dividendo eh 8
O divisor eh 5
O quociente eh 1
E o resto eh 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:07:12) 
-- CODE:
X = int(input("Digite o primeiro numero:"))
Y = int (input("Digite o segundo numero:"))

X = dividendo
Y = divisor
quociente = dividendo//divisor
resto = divisor//dividendo 

print ("O dividendo eh:")
print ("O divisor eh: ")
print ("O quociente eh: ")
print ("O resto eh: ")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    X = dividendo
NameError: name 'dividendo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:07:44) 
-- CODE:
X = int(input("Digite o primeiro numero:"))
Y = int (input("Digite o segundo numero:"))

X = dividendo
Y = divisor
quociente = dividendo//divisor
resto = divisor%dividendo

print ("O dividendo eh:")
print ("O divisor eh: ")
print ("O quociente eh: ")
print ("O resto eh: ")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    X = dividendo
NameError: name 'dividendo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:08:42) 
-- CODE:
X = int(input("Digite o primeiro numero:"))
Y = int (input("Digite o segundo numero:"))

dividendo = X
divisor = Y
quociente = dividendo//divisor
resto = divisor%dividendo

print ("O dividendo eh:")
print ("O divisor eh: ")
print ("O quociente eh: ")
print ("O resto eh: ")


-- OUTPUT:
O dividendo eh:
O divisor eh: 
O quociente eh: 
O resto eh:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:09:50) 
-- CODE:
X = int(input("Digite o primeiro numero:"))
Y = int (input("Digite o segundo numero:"))

dividendo = X
divisor = Y
quociente = dividendo//divisor
resto = divisor%dividendo

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:11:15) 
-- CODE:
X = int(input("Digite o primeiro numero:"))
Y = int (input("Digite o segundo numero:"))

dividendo = X
divisor = Y
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:11:25) 
-- CODE:
X = int(input("Digite o primeiro numero:"))
Y = int (input("Digite o segundo numero:"))

dividendo = X
divisor = Y
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.177065
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:11:50) 
-- CODE:
X = int(input("Digite o primeiro numero:"))
Y = int (input("Digite o segundo numero:"))

dividendo = X
divisor = Y
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.114995
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:11:52) 
-- CODE:
X = int(input("Digite o primeiro numero:"))
Y = int (input("Digite o segundo numero:"))

dividendo = X
divisor = Y
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:12:07) 
-- CODE:
X = int(input("Digite o primeiro numero:"))
Y = int (input("Digite o segundo numero:"))

dividendo = X
divisor = Y
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:16:05) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:16:34) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo%divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.203411
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:16:53) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:16:58) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.167783
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:23:02) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.181811
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:23:17) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:12:21) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.176271
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:12:57) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:13:04) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.108794
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:14:06) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:14:16) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.169285
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:14:19) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:14:21) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.210778
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:33:44) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:34:06) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- OUTPUT:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:34:09) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print ("O dividendo eh: ", dividendo)
print ("O divisor eh: ", divisor)
print ("O quociente eh: ", quociente)
print ("O resto eh: ", resto)


-- EXECUTION TIME:
0.25098
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo eh:  8
O divisor eh:  5
O quociente eh:  1
O resto eh:  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo eh:  14
O divisor eh:  2
O quociente eh:  7
O resto eh:  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo eh:  347
O divisor eh:  2
O quociente eh:  173
O resto eh:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:34:35) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print (dividendo)
print (divisor)
print (quociente)
print (resto)


-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:34:38) 
-- CODE:
var1 = int(input("Digite o primeiro numero:"))
var2 = int (input("Digite o segundo numero:"))

dividendo = var1
divisor = var2
quociente = dividendo//divisor
resto = dividendo % divisor

print (dividendo)
print (divisor)
print (quociente)
print (resto)


-- EXECUTION TIME:
0.136927
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
